# WL

./: .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  CMakePresets.json  FindEigen3.cmake  README.md  build.sh  conanfile.txt  main.cpp  run.sh  run_beskow.sh  run_beskow_debug.sh  run_my_pc.sh  run_triolith.sh  run_triolith_debug.sh  update_submodule.sh
.github/workflows/: ubuntu-22.04.yml
Analysis/: analysis1d.py  energies.txt
EMC-Lib/: DNA.cpp  DNA.hpp  EMC.cpp  EMC.h  constants.cpp  constants.hpp  evolution.cpp  evolution.hpp  mymath.cpp  mymath.hpp  objective_function.cpp  objective_function.hpp  personality.cpp  personality.hpp  population.cpp  population.hpp  randomFunctions.cpp  randomFunctions.hpp  species.cpp  species.hpp
Matlab/: Analysis.m  Analysis2d.m  Analysis_final_1D.m  M_test.m  dos_ising.m  espace.m  ising_exact.m  thermo.m  thermo2d.m
cmake/: CompilerFlags.cmake  Deprecation.cmake  DeprecationWarnings.cmake  FindEigen3.cmake  PrintBuildInfo.cmake  PrintTargetInfo.cmake  SetupDependencies.cmake  SetupDependenciesCMake.cmake  SetupDependenciesCPM.cmake  SetupDependenciesConan.cmake  SetupDependenciesFetch.cmake  SetupDependenciesFind.cmake  SetupPaths.cmake
cmake/external_cli11/: CMakeLists.txt
cmake/external_h5pp/: CMakeLists.txt
source/: MPI_algorithms.cpp  MPI_algorithms.h  bootstrap.cpp  bootstrap.h  class_WL_bootstrap.cpp  class_WL_bootstrap.h  class_WL_print_data.cpp  class_WL_print_data.h  class_WL_read_data.cpp  class_WL_read_data.h  class_WL_statistics.cpp  class_WL_statistics.h  class_WL_thermo.cpp  class_WL_thermo.h  class_WL_worker.cpp  class_WL_worker.h  class_data.cpp  class_data.h  class_lattice.cpp  class_lattice.h  class_master.cpp  class_master.h  class_model.cpp  class_model.h  class_profiling.cpp  class_profiling.h  class_tic_toc.cpp  class_tic_toc.h  class_worker.cpp  class_worker.h  constants.h  counters.h  counters_timers.h  main.cpp  math_algorithms.cpp  math_algorithms.h  nmspc_WL_constants.h  nmspc_WL_counters_timers.h  nmspc_WL_parallel_algorithms.cpp  nmspc_WL_parallel_algorithms.h  (+13 more)
source/IO/: class_WL_print_data.cpp  class_WL_print_data.h  class_WL_read_data.cpp  class_WL_read_data.h  std_filesystem.h
source/algorithm/: bootstrap.cpp  bootstrap.h  class_WL_statistics.cpp  class_WL_statistics.h  class_WL_teams.cpp  class_WL_teams.h  class_WL_thermo.cpp  class_WL_thermo.h  class_WL_worker.cpp  class_WL_worker.h  nmspc_WL_counters_timers.h  nmspc_WL_parallelization.cpp  nmspc_WL_parallelization.h  sampling.cpp  sampling.h  simulation.cpp  simulation.h
source/general/: class_tic_toc.cpp  class_tic_toc.h  nmspc_logger.h  nmspc_math_algorithms.cpp  nmspc_math_algorithms.h  nmspc_mpi_extensions.h  nmspc_random_numbers.cpp  nmspc_random_numbers.h
source/params/: class_model.cpp  class_model.h  nmspc_WL_constants.h
